--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alexander Bakalov",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "html-to-text": "^9.0.4",
+    "node-html-parser": "^6.1.4",
+    "puppeteer": "^19.7.1"
+  }
 }
