--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.3",
     "html-to-text": "^9.0.4",
     "node-html-parser": "^6.1.4",
     "puppeteer": "^19.7.1"
