--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -21,10 +21,7 @@ WORKDIR /usr/src/app
 # where available (npm@5+)
 COPY package*.json ./
 
-RUN npm ci
-# If you are building your code for production
-# RUN npm ci --only=production
-# RUN chmod -R o+rwx ./node_modules/puppeteer/.local-chromium
+RUN npm ci --only=production
 
 # Bundle app source
 COPY . .
