--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,27 @@ services:
       - HATE_SERVICE_PORT=5000
       - IMAGE_PROCESSOR_ID=image-service
       - IMAGE_PROCESSOR_PORT=81
+      - PATH_TO_STATIC=/static
+    volumes:
+      - static-volume:/static
+
+  client:
+    build:
+      context: ./client/
+    container_name: safesites-client
+    volumes:
+      - static-volume:/static
+    command: tail -F anything
+  
+  webserver:
+    image: nginx:alpine
+    container_name: webserver
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - static-volume:/static
+volumes:
+  static-volume:
